# Distributed-Robot-Perception-Project

./: CMakeLists.txt  README.md  coppeliasim_bowl.ttt  coppeliasim_scene.ttt  find_voro_cell_v.gnu  package.xml  pdf_polyhedron.gnu  robots.gnu  setup.py  starting_poly.gnu  test_project.ttt
.github/workflows/: main.yml
include/project/: icosahedron.h  utils.h
launch/: cloud_converter.launch.py  full_simulation.launch copy.py  full_simulation.launch.py  full_simulation_points.launch.py  test.launch.py  voronoi_scan.launch.py
rviz_config/: pc_saved.rviz  rviz.rviz  rviz_point.rviz
scripts/: README.md  vis.py  visualization.py
src/: hull.cpp  integrate_test.cpp  integration.cpp  marker_publisher.cpp  pointcloud_accumulator.cpp  test.cpp  test_inside.cpp  tf_pub.cpp  voronoi_calculator.cpp
voronoi/: find_voro_cell.cc  integration.cpp  integration.py  test.sh  voronoi_calculator.cpp
